--- a/Prueba.html
+++ b/Prueba.html
@@ -34,8 +34,9 @@
     	</table>
     	 </header>
 <!--DATOS CLIENTE O PROVEEDOR -->	
-	<h1>Datos - &lt;&lt;[AUX_TIPO_PERSONA]&gt;&gt;</h1>
 	<article>
+	<h1>Datos - &lt;&lt;[AUX_TIPO_PERSONA]&gt;&gt;</h1>
+
 	    <table>
 			<tr>
 				<th style="text-align: left; font-weight: bold"><span>Razon social</span></th>
@@ -98,23 +99,12 @@
 		</table>
 	</article>
 </body>
-<style>
-.footer {
-    font: 16px/1 'Open Sans', sans-serif;
-    position: fixed;
-    left: 0;
-    bottom: 5;
-    width: 100%;
-    color: black;
-    text-align: center;
-}
-</style>
 
-<div class="footer">
-<p>La presente cotización tiene una vigencia de 15 (quince) días calendario a partir de la fecha de emisión.
+<footer>
+La presente cotización tiene una vigencia de 15 (quince) días calendario a partir de la fecha de emisión.
 Los precios y la disponibilidad de productos están sujetos a cambios sin previo aviso, debido a factores externos y condiciones del mercado.
 
 Agradecemos sinceramente la confianza depositada en &lt;&lt;[Id_Empresa].[Nombre Comercial]&gt;&gt; al considerar nuestros productos y servicios.
-</p>
-    </div>
+
+</footer>
 </html>
