--- a/Prueba.html
+++ b/Prueba.html
@@ -13,41 +13,41 @@
     	<table class="inventory">
     		<tr>
     		    <th rowspan="3" style="width: 10%; text-align: center">&lt;&lt;[Id_Empresa].[Logo]&gt;&gt;</th>
-    		    <td rowspan="3" style="width: 40%; text-align: center"><br>
+    		    <td rowspan="3" style="width: 40%; text-align: center;"><br>
     		        &lt;&lt;[Id_Empresa].[Nombre Comercial]&gt;&gt;<br>
     		        &lt;&lt;[Id_Empresa].[Razon Social]&gt;&gt;<br>
     		        &lt;&lt;[Id_Empresa].[Direccion]&gt;&gt;<br>
     		        &lt;&lt;[Id_Empresa].[Correo]&gt;&gt;<br>
     		        &lt;&lt;[Id_Empresa].[Telefono]&gt;&gt;
     		    </td>
-    		    <th style="width: 20%;">Fecha</th>
-    		    <td>&lt;&lt;[Fecha_Transaccion]&gt;&gt;</td>
+    		    <th style="width: 20%; ">Fecha</th>
+    		    <td style="width: 20%; ">&lt;&lt;[Fecha_Transaccion]&gt;&gt;</td>
     		</tr>
     		<tr>
-    		   <th>Estado</th>
-    		    <td>&lt;&lt;[Estado_Transaccion]&gt;&gt;</td>
+    		   <th style="width: 20%;  ">Estado</th>
+    		    <td style="width: 20%; ">&lt;&lt;[Estado_Transaccion]&gt;&gt;</td>
     		</tr>
     		<tr>
-        	    <th>Elaborado por</th>
-    		    <td>&lt;&lt;[Vendedor_Transaccion]&gt;&gt;</td>
+        	    <th style="width: 20%; ">Transacción</th>
+    		    <td style="width: 20%; ">&lt;&lt;[Id_Transaccion]&gt;&gt;</td>
     		</tr>
     	</table>
-    	 </header>
+    </header>
 <!--DATOS CLIENTE O PROVEEDOR -->	
 	
 	<h3>Datos - &lt;&lt;[AUX_TIPO_PERSONA]&gt;&gt;</h3>
-<article>
-	    <table>
+
+	    <table class="inventory">
 			<tr>
-				<th style="text-align: left; font-weight: bold"><span>Razon social</span></th>
-    				<td style="width: 50%;"><span>&lt;&lt;[Razon Social]&gt;&gt;</span></td>
-    			<th style="text-align: left; font-weight: bold"><span>Correo</span></th>
-    				<td style="width: 20%;"><span>&lt;&lt;[Correo_Persona]&gt;&gt;</span></td>
+				<th style="font-weight: bold"><span>Razon social</span></th>
+    				<td style="width: 45%;"><span>&lt;&lt;[Razon Social]&gt;&gt;</span></td>
+    			<th style="font-weight: bold; width: 15%"><span>Correo</span></th>
+    				<td><span>&lt;&lt;[Correo_Persona]&gt;&gt;</span></td>
 			</tr>
 			<tr>
-				<th style="text-align: left; font-weight: bold"><span>Direccion</span></th>
+				<th style="font-weight: bold"><span>Direccion</span></th>
 			    	<td><span>&lt;&lt;[Direccion_Persona]&gt;&gt;</span></td>
-				<th style="text-align: left; font-weight: bold"><span>Teléfono</span></th>
+				<th  style="font-weight: bold; width: 15%"><span>Teléfono</span></th>
 				    <td><span>&lt;&lt;[Telefono_Persona]&gt;&gt;</span></td>
 			</tr>
 	</table>
@@ -61,7 +61,6 @@
 					<th style="text-align: center; font-weight: bold"><span>Total</span></th>
 				</tr>
 			</thead>
-	
 				<p><span>&lt;&lt;Start: Agregar Productos&gt;&gt;</span></p>
 					<tr>
 					    <td style="text-align: center;"><span>&lt;&lt;[Contador]&gt;&gt;</span></td>
@@ -71,7 +70,6 @@
 						<td style="text-align: center;"><span>&lt;&lt;[Total_DetalleTransaccion]&gt;&gt;</span></td>
 					</tr>
 				<p><span>&lt;&lt; end &gt;&gt;</span></p>
-		
 		</table>
 		<table>
     		<tr>
@@ -80,7 +78,7 @@
 				<p>&lt;&lt;[Nota_Transaccion]&gt;&gt;</p>
     		    </td>
 				<th><span>Subtotal</span></th>
-				<td><span>&lt;&lt;[SubTotal_Transaccion]&gt;&gt;</span></td>
+				<td style="text-align: center;"><span>&lt;&lt;[SubTotal_Transaccion]&gt;&gt;</span></td>
 			</tr>
 			<tr>
 				<th><span>IVA</span></th>
@@ -97,14 +95,11 @@
 					<td style="text-align: center;"><span>&lt;&lt;[Total_Transaccion]&gt;&gt;</span></td>
 			</tr>
 		</table>
-	</article>
+
+<table>
+<td>
+<span>&lt;&lt;[Pie de Pagina]&gt;&gt;</span>
+</td>
+</table>
 </body>
-
-<h2>
-La presente cotización tiene una vigencia de 15 (quince) días calendario a partir de la fecha de emisión.
-Los precios y la disponibilidad de productos están sujetos a cambios sin previo aviso, debido a factores externos y condiciones del mercado.
-
-Agradecemos sinceramente la confianza depositada en &lt;&lt;[Id_Empresa].[Nombre Comercial]&gt;&gt; al considerar nuestros productos y servicios.
-
-</h2>
 </html>
