--- a/Prueba.html
+++ b/Prueba.html
@@ -39,26 +39,26 @@
 
 	    <table class="inventory">
 			<tr>
-				<th style="font-weight: bold"><span>Razon social</span></th>
+				<th><span>Razon social</span></th>
     				<td style="width: 45%;"><span>&lt;&lt;[Razon Social]&gt;&gt;</span></td>
-    			<th style="font-weight: bold; width: 15%"><span>Correo</span></th>
+    			<th style="width: 15%"><span>Correo</span></th>
     				<td><span>&lt;&lt;[Correo_Persona]&gt;&gt;</span></td>
 			</tr>
 			<tr>
-				<th style="font-weight: bold"><span>Direccion</span></th>
+				<th><span>Direccion</span></th>
 			    	<td><span>&lt;&lt;[Direccion_Persona]&gt;&gt;</span></td>
-				<th  style="font-weight: bold; width: 15%"><span>Teléfono</span></th>
+				<th style="width: 15%"><span>Teléfono</span></th>
 				    <td><span>&lt;&lt;[Telefono_Persona]&gt;&gt;</span></td>
 			</tr>
 	</table>
 	    <table>
 			<thead>
 				<tr>
-					<th style="text-align: center; font-weight: bold"><span>Orden</span></th>
-					<th style="width: 50%; text-align: center; font-weight: bold"><span>Descripcion</span></th>
-					<th style="text-align: center; font-weight: bold"><span>Valor</span></th>
-					<th style="text-align: center; font-weight: bold"><span>Cantidad</span></th>
-					<th style="text-align: center; font-weight: bold"><span>Total</span></th>
+					<th><span>Orden</span></th>
+					<th><span>Descripcion</span></th>
+					<th><span>Valor</span></th>
+					<th><span>Cantidad</span></th>
+					<th><span>Total</span></th>
 				</tr>
 			</thead>
 				<p><span>&lt;&lt;Start: Agregar Productos&gt;&gt;</span></p>
