--- a/Prueba.html
+++ b/Prueba.html
@@ -51,7 +51,7 @@
 				    <td><span>&lt;&lt;[Telefono_Persona]&gt;&gt;</span></td>
 			</tr>
 	</table>
-	    <table>
+	    <table class="inventory">
 			<thead>
 				<tr>
 					<th><span>Orden</span></th>
@@ -71,7 +71,7 @@
 					</tr>
 				<p><span>&lt;&lt; end &gt;&gt;</span></p>
 		</table>
-		<table>
+		<table class="inventory">
     		<tr>
     		    <td rowspan="5" style="width: 70%; text-align: left">
     		  <span>Notas adicionales:</span><Br>
