--- a/Prueba.html
+++ b/Prueba.html
@@ -55,7 +55,7 @@
 			<thead>
 				<tr>
 					<th><span>Orden</span></th>
-					<th><span>Descripcion</span></th>
+					<th style="width: 50%; text-align: center; font-weight: bold"><span>Descripcion</span></th>
 					<th><span>Valor</span></th>
 					<th><span>Cantidad</span></th>
 					<th><span>Total</span></th>
